src/App.css
body {
  color: #000000;
  font-family: "Poppins", sans-serif;
  font-weight: 100;
}

.Header {
  padding-bottom: 50px;
  text-align: center;
}

.Header__logo {
  margin: 0 10%;
  max-width: 750px;
}

.Header__title {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-size: 5em;
  margin-bottom: 0;
}

.Header__intro {
  font-size: 1.5em;
}

.Login {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.Login__eyes {
  width: 100px;
}

.Login__button {
  border: 1px solid #000000;
  color: #000000;
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-size: 2em;
  height: 75px;
  margin: 50px 0;

  /* TODO: cleanup transition */
  transition: all 500ms;
  transition-timing-function: ease-in-out;
}

.Login__button:hover {
  color: #ffffff;
  background: #000000;

  /* TODO: cleanup transition */
  transition: all 500ms;
  transition-timing-function: ease-in-out;
}

.Login__intro {
  margin: 0;
}

.Spinner {
  /* TODO: replace with svg */
  font-size: 3em;
  display: flex;
  justify-content: center;
}

.User {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.User__avatar {
  clip-path: circle(100px at center);
  align-self: center;
}

.User__intro {
  margin: 50px 15% 0 15%;
  text-align: center;
}

.Tabs__active-content {
  max-width: 750px;
  margin: 0 auto;
}

.Tabs__list {
  list-style-type: none;
  text-align: center;
  margin-bottom: 50px;
  white-space: nowrap;
  padding: 0;
}

.Tab {
  display: inline;
  margin: 0 25px;
  cursor: pointer;
  padding: 15px 0;
}

.Tab:hover {
  background: #000000;
  color: #ffffff;
  border-bottom: 2px solid #000000;
}

.Tab.active {
  border-bottom: 2px solid #000000;
}

.Dashboard {
  margin: 0 10%;
}

.FavouriteSong__intro,
.FavouriteSong__song,
.FavouriteSong__artist {
  text-align: center;
}

.AudioFeatures {
  padding: 50px 0;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-column-gap: 50px;
}

.AudioFeature {
  justify-items: begin;
  padding: 25px 0;
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: repeat(3, auto);
  grid-row-gap: 10px;
  grid-column-gap: 15px;
  text-transform: capitalize;
}

.AudioFeature__title,
.AudioFeature__value {
  display: inline;
}

.AudioFeature__value {
  padding-left: 10px;
  font-weight: 400;
}

.AudioFeature__img {
  grid-column-start: 2;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 4;
  width: 150px;
  justify-self: end;
}

.Bar {
  width: 100%;
  background: #4e4d4d;
  color: #ffffff;
  height: 50px;
  border-radius: 5px;
}

.Bar__item {
  display: flex;
  height: 50px;
  border-radius: 5px;
  transition: width 2s cubic-bezier(0.29, 1.01, 1, -0.68);
  cursor: pointer;
}

.Bar__value {
  align-self: center;
  padding-left: 15px;
  font-weight: 800;
}

/* TODO: Do something with this */
@keyframes Spinner-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

